# sycltutor

./: .bash_localrc  .gitignore  CMakeLists.txt  README.md  algo.h  get_selected_device.h  main.cpp  simdclass.h  slides.md
.oldtrash/: oldhisto.cpp  oldmain.cpp  oldsortbitonic.cpp  radix_sort.h
benchs/: mandelbrot.cpp  radix_sort.cpp
clib/: exclusive_scan.h  print_buffer.h  radix_sort.h  sycl_context_manager.h
utils/: autobench.h  ticktock.h  unsigned128.h
